# mi7soft-daemon

./: .gitignore  AGENTS.md  CHANGELOG.md  CLI_OPTIMIZATION.md  CODE_ANALYSIS.md  Cargo.toml  MEMORY.md  PATH_A_SUMMARY.md  QUICK_TEST.sh  README.md  TESTING_GUIDE.md  WEBSITE.md  build_and_test.sh  index.html  test-daemon.toml  test.php
.github/workflows/: deploy.yml
assets/: index-80fr0my_.css  index-C2iKl4jo.css  index-ZS1BDtBA.js  index-ZS1BDtBA.js.map  index-hR9ZlaII.js  index-hR9ZlaII.js.map
config/: daemon.toml
src/: cli.rs  config.rs  daemon.rs  error.rs  formatter.rs  logging.rs  main.rs  main.rs.patch  pidfile.rs  process.rs  process.rs.patch  process_output.rs  signal.rs  storage.rs
web/: README.md  deploy.sh  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
web/src/: App.tsx  index.css
web/src/components/layout/: Footer.tsx  Layout.tsx  Navbar.tsx
web/src/components/ui/: CodeBlock.tsx  PerformanceChart.tsx
web/src/i18n/: config.ts
web/src/locales/: en.json  en.json.backup  zh.json  zh.json.backup
web/src/pages/: About.tsx  About.tsx.backup  Contact.tsx  Features.tsx  Features.tsx.backup  Home.tsx.backup  Home.tsx.fixed  Home.tsx.fullbackup
