[package]
name = "mi7soft-daemon"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
description = "A daemon process manager that keeps your services running"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
anyhow = "1.0"
sysinfo = "0.30"
dirs = "5.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28", features = ["process", "signal"] }
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
daemonize = "0.5"

[dev-dependencies]
tempfile = "3"
